# BraVi

./: CMakeLists.txt  Doxyfile  config.h.cmake  seegViewer.kdevelop.pcs
src/: CMakeLists.txt  MainWidget.cpp  MainWidget.h  PACSQueryDialog.cpp  PACSQueryDialog.h  QVTKSquareWidget.cpp  QVTKSquareWidget.h  ReadImageDialog.cpp  ReadImageDialog.h  SliceActor.cpp  SliceActor.h  Surface3DActor.cpp  Surface3DActor.h  SurfaceWidget.cpp  SurfaceWidget.h  Volume3DActor.cpp  Volume3DActor.h  main.cpp  resources.qrc  vtkGenericMedicalImageReader.cpp  vtkGenericMedicalImageReader.h  vtkNiftiImageReader.cpp  vtkNiftiImageReader.h
src/libfilter/: CMakeLists.txt  DanielssonDistanceMapFilter.cpp  DanielssonDistanceMapFilter.h  abstractFilter.h  applyRigidTransformFilter.cpp  applyRigidTransformFilter.h  betFilter.cpp  betFilter.h  binaryDilateFilter.cpp  binaryDilateFilter.h  binaryErodeFilter.cpp  binaryErodeFilter.h  binaryPruningFilter.cpp  binaryPruningFilter.h  binaryThinningFilter.cpp  binaryThinningFilter.h  binaryThresholdFilter.cpp  binaryThresholdFilter.h  connectedThresholdFilter.cpp  connectedThresholdFilter.h  convertFilter.cpp  convertFilter.h  convertSeriesFilter.cpp  convertSeriesFilter.h  derivativeFilter.cpp  derivativeFilter.h  electrodeAxisExtractionFilter.cpp  electrodeAxisExtractionFilter.h  electrodeAxisExtractionFilter2.cpp  electrodeAxisExtractionFilter2.h  electrodeAxisExtractionFilter3.cpp  electrodeAxisExtractionFilter3.h  fastMarchingFilter.cpp  fastMarchingFilter.h  fileFilterIOWidget.cpp  fileFilterIOWidget.h  filterDialog.cpp  filterDialog.h  filterIOWidget.h  filterInput.h  (+36 more)
src/res/: BraVi.desktop  resfile.rc  seegViewer.desktop  seegViewer2.desktop  xtensViewer.desktop  xtensViewer2.desktop
